--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 A historia em busca dos 1000 GOLS
 
 
-
-
-
 Cristiano Ronaldo 2008 ► Ballon d'Or Level Skills 👑
 
 Ronaldo With His Family + Georgina 💀
+
+
+Cristiano Ronaldo - All 900 Goals With Commentaries
+
+Juventus 0 x 3 Real Madrid- Melhores Momentos - Quartas de Final Champions League 2017/18
