--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-A historia em busca dos 1000 GOLS
+<header>A historia em busca dos 1000 </header>
 
 
-Cristiano Ronaldo 2008 ► Ballon d'Or Level Skills 👑
+<h1>Cristiano Ronaldo 2008 ► Ballon d'Or Level Skills 👑</h1>
 
 Ronaldo With His Family + Georgina 💀
 
