--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<header>A historia em busca dos 1000 </header>
+<header>A HISTORIA EM BUSCA DOS 1000 GOLS</header>
 
 
 <h1>Cristiano Ronaldo 2008 ► Ballon d'Or Level Skills 👑</h1>
