--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<header>A HISTORIA EM BUSCA DOS 1000 GOLS</header>
+<h1>A HISTORIA EM BUSCA DOS 1000 GOLS</h1>
 
 
-<h1>Cristiano Ronaldo 2008 ► Ballon d'Or Level Skills 👑</h1>
+<header>Cristiano Ronaldo 2008 ► Ballon d'Or Level Skills 👑</header>
 
 Ronaldo With His Family + Georgina 💀
 
