--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>A HISTORIA EM BUSCA DOS 1000 GOLS</h1>
 
 
-<header>Cristiano Ronaldo 2008 ► Ballon d'Or Level Skills 👑</header>
+<h2>Cristiano Ronaldo 2008 ► Ballon d'Or Level Skills 👑</h2>
 
 Ronaldo With His Family + Georgina 💀
 
