--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
- <header>Palmeirasclub</header>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JocaLux - Artigos de Luxo</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50; /* Verde */
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+        h1 {
+            margin: 0;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+            padding: 20px;
+        }
+        .product {
+            background-color: white;
+            border: 2px solid #FFD700; /* Dourado */
+            border-radius: 8px;
+            padding: 15px;
+            margin: 10px 0;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            background-color: #4CAF50; /* Verde */
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>JocaLux</h1>
+        <p>Artigos de Luxo Exclusivos</p>
+    </header>
+
+    <div class="container">
+        <h2>Nossos Produtos</h2>
+
+        <div class="product">
+            <h3>Relógio de Luxo</h3>
+            <p>Um relógio elegante feito com materiais de alta qualidade.</p>
+        </div>
+
+        <div class="product">
+            <h3>Bolsa de Designer</h3>
+            <p>Bolsa exclusiva de couro, perfeita para qualquer ocasião.</p>
+        </div>
+
+        <div class="product">
+            <h3>Joia Personalizada</h3>
+            <p>Joia única, feita sob medida para você.</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 JocaLux. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
