--- a/index.html
+++ b/index.html
@@ -48,51 +48,29 @@
         .product:hover {
             transform: scale(1.02);
         }
-        footer {
-            background-color: #4CAF50; /* Verde */
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-            position: relative;
-            bottom: 0;
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
             width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+            padding-top: 60px;
         }
-    </style>
-</head>
-<body>
-    <header>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Crown.svg/1024px-Crown.svg.png" alt="Coroa" class="crown">
-        <h1>JocaLux</h1>
-        <p>Artigos de Luxo Exclusivos</p>
-    </header>
-
-    <div class="container">
-        <h2>Nossos Produtos</h2>
-
-        <div class="product" onclick="showProduct('Relógio de Luxo', 299)">
-            <h3>Relógio de Luxo</h3>
-            <p>Um relógio elegante feito com materiais de alta qualidade.</p>
-        </div>
-
-        <div class="product" onclick="showProduct('Bolsa de Designer', 499)">
-            <h3>Bolsa de Designer</h3>
-            <p>Bolsa exclusiva de couro, perfeita para qualquer ocasião.</p>
-        </div>
-
-        <div class="product" onclick="showProduct('Joia Personalizada', 799)">
-            <h3>Joia Personalizada</h3>
-            <p>Joia única, feita sob medida para você.</p>
-        </div>
-    </div>
-
-    <footer>
-        <p>&copy; 2024 JocaLux. Todos os direitos reservados.</p>
-    </footer>
-
-    <script>
-        function showProduct(name, price) {
-            alert(`Produto: ${name}\nPreço: $${price}`);
+        .modal-content {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            text-align: center;
         }
-    </script>
-</body>
-</html>
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
