--- a/index.html
+++ b/index.html
@@ -74,3 +74,71 @@
             float: right;
             font-size: 28px;
             font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Crown.svg/1024px-Crown.svg.png" alt="Coroa" class="crown">
+        <h1>JocaLux</h1>
+        <p>Artigos de Luxo Exclusivos</p>
+    </header>
+
+    <div class="container">
+        <h2>Nossos Produtos</h2>
+
+        <div class="product" onclick="showProduct('Relógio de Luxo', 299, 'https://example.com/relogio.jpg')">
+            <h3>Relógio de Luxo</h3>
+            <p>Um relógio elegante feito com materiais de alta qualidade.</p>
+        </div>
+
+        <div class="product" onclick="showProduct('Bolsa de Designer', 499, 'https://example.com/bolsa.jpg')">
+            <h3>Bolsa de Designer</h3>
+            <p>Bolsa exclusiva de couro, perfeita para qualquer ocasião.</p>
+        </div>
+
+        <div class="product" onclick="showProduct('Joia Personalizada', 799, 'https://example.com/joia.jpg')">
+            <h3>Joia Personalizada</h3>
+            <p>Joia única, feita sob medida para você.</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 JocaLux. Todos os direitos reservados.</p>
+    </footer>
+
+    <div id="productModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2 id="modalTitle"></h2>
+            <img id="modalImage" src="" alt="" style="max-width: 100%; height: auto;">
+            <p id="modalPrice"></p>
+        </div>
+    </div>
+
+    <script>
+        function showProduct(name, price, image) {
+            document.getElementById('modalTitle').innerText = name;
+            document.getElementById('modalPrice').innerText = `Preço: $${price}`;
+            document.getElementById('modalImage').src = image;
+            document.getElementById('productModal').style.display = 'block';
+        }
+
+        function closeModal() {
+            document.getElementById('productModal').style.display = 'none';
+        }
+
+        window.onclick = function(event) {
+            if (event.target == document.getElementById('productModal')) {
+                closeModal();
+            }
+        }
+    </script>
+</body>
+</html>
