--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>JocaLux - Artigos de Luxo</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Georgia', serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: linear-gradient(to right, #f8f8f8, #e0e0e0);
             color: #333;
         }
         header {
@@ -18,13 +18,16 @@
             text-align: center;
             padding: 20px 0;
             position: relative;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
         }
         header h1 {
             margin: 0;
-            display: inline;
+            display: inline-block;
+            font-size: 2.5em;
+            font-weight: bold;
         }
         .crown {
-            width: 50px;
+            width: 60px;
             height: auto;
             position: absolute;
             left: 20px;
@@ -35,18 +38,33 @@
             margin: auto;
             overflow: hidden;
             padding: 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
         }
         .product {
             background-color: white;
             border: 2px solid #FFD700; /* Dourado */
-            border-radius: 8px;
-            padding: 15px;
+            border-radius: 10px;
+            padding: 20px;
             margin: 10px 0;
             cursor: pointer;
-            transition: transform 0.2s;
+            transition: transform 0.2s, box-shadow 0.2s;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
         }
         .product:hover {
-            transform: scale(1.02);
+            transform: translateY(-5px);
+            box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+        }
+        footer {
+            background-color: #4CAF50; /* Verde */
+            color: white;
+            text-align: center;
+            padding: 15px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+            font-weight: bold;
         }
         .modal {
             display: none;
@@ -57,17 +75,19 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            background-color: rgb(0,0,0);
-            background-color: rgba(0,0,0,0.4);
+            background-color: rgba(0, 0, 0, 0.8);
             padding-top: 60px;
         }
         .modal-content {
-            background-color: #fefefe;
-            margin: 5% auto;
+            background-color: #fff;
+            margin: 10% auto;
             padding: 20px;
             border: 1px solid #888;
             width: 80%;
+            max-width: 600px;
             text-align: center;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3);
         }
         .close {
             color: #aaa;
@@ -81,6 +101,11 @@
             text-decoration: none;
             cursor: pointer;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
@@ -91,8 +116,6 @@
     </header>
 
     <div class="container">
-        <h2>Nossos Produtos</h2>
-
         <div class="product" onclick="showProduct('Relógio de Luxo', 299, 'https://example.com/relogio.jpg')">
             <h3>Relógio de Luxo</h3>
             <p>Um relógio elegante feito com materiais de alta qualidade.</p>
@@ -117,7 +140,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <h2 id="modalTitle"></h2>
-            <img id="modalImage" src="" alt="" style="max-width: 100%; height: auto;">
+            <img id="modalImage" src="" alt="">
             <p id="modalPrice"></p>
         </div>
     </div>
@@ -142,4 +165,3 @@
     </script>
 </body>
 </html>
-
