--- a/index.html
+++ b/index.html
@@ -25,13 +25,6 @@
             font-weight: bold;
             color: #FFD700; /* Dourado */
         }
-        .crown {
-            width: 60px;
-            height: auto;
-            position: absolute;
-            left: 20px;
-            top: 20px;
-        }
         .container {
             width: 80%;
             margin: auto;
@@ -103,70 +96,61 @@
             height: auto;
             border-radius: 10px;
         }
-        .lamborghini {
-            width: 100%;
-            margin: 20px 0;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-        }
     </style>
 </head>
 <body>
     <header>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Crown.svg/1024px-Crown.svg.png" alt="Coroa" class="crown">
         <h1>JocaLux</h1>
         <p>Artigos de Luxo Exclusivos</p>
     </header>
 
     <div class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Lamborghini_Aventador_S_%28Lamborghini%29.jpg/1200px-Lamborghini_Aventador_S_%28Lamborghini%29.jpg" alt="Lamborghini" class="lamborghini">
-
         <div class="product" onclick="showProduct('Relógio de Luxo', 299, 'https://example.com/relogio.jpg')">
             <h3>Relógio de Luxo</h3>
             <p>Um relógio elegante feito com materiais de alta qualidade.</p>
-            <p><strong>Preço: €299</strong></p>
+            <p><strong>A partir de: €299</strong></p>
         </div>
 
         <div class="product" onclick="showProduct('Bolsa de Designer', 499, 'https://example.com/bolsa.jpg')">
             <h3>Bolsa de Designer</h3>
             <p>Bolsa exclusiva de couro, perfeita para qualquer ocasião.</p>
-            <p><strong>Preço: €499</strong></p>
+            <p><strong>A partir de: €499</strong></p>
         </div>
 
         <div class="product" onclick="showProduct('Joia Personalizada', 799, 'https://example.com/joia.jpg')">
             <h3>Joia Personalizada</h3>
             <p>Joia única, feita sob medida para você.</p>
-            <p><strong>Preço: €799</strong></p>
+            <p><strong>A partir de: €799</strong></p>
         </div>
 
         <div class="product" onclick="showProduct('Sapatos de Designer', 399, 'https://example.com/sapatos.jpg')">
             <h3>Sapatos de Designer</h3>
             <p>Estilo e conforto em cada passo.</p>
-            <p><strong>Preço: €399</strong></p>
+            <p><strong>A partir de: €399</strong></p>
         </div>
 
         <div class="product" onclick="showProduct('Cinto de Couro', 199, 'https://example.com/cinto.jpg')">
             <h3>Cinto de Couro</h3>
             <p>Cinto de couro premium, ideal para qualquer ocasião.</p>
-            <p><strong>Preço: €199</strong></p>
+            <p><strong>A partir de: €199</strong></p>
         </div>
 
         <div class="product" onclick="showProduct('Perfume Exclusivo', 149, 'https://example.com/perfume.jpg')">
             <h3>Perfume Exclusivo</h3>
             <p>Uma fragrância única que deixa uma marca inesquecível.</p>
-            <p><strong>Preço: €149</strong></p>
+            <p><strong>A partir de: €149</strong></p>
         </div>
 
         <div class="product" onclick="showProduct('Óculos de Sol', 249, 'https://example.com/oculos.jpg')">
             <h3>Óculos de Sol</h3>
             <p>Estilo e proteção em um só produto.</p>
-            <p><strong>Preço: €249</strong></p>
+            <p><strong>A partir de: €249</strong></p>
         </div>
 
         <div class="product" onclick="showProduct('Bracelete de Ouro', 599, 'https://example.com/bracelete.jpg')">
             <h3>Bracelete de Ouro</h3>
             <p>Um toque de elegância para qualquer look.</p>
-            <p><strong>Preço: €599</strong></p>
+            <p><strong>A partir de: €599</strong></p>
         </div>
     </div>
 
