--- a/index.html
+++ b/index.html
@@ -187,3 +187,31 @@
     </script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Relógio Rolex</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #2E7D32; /* Verde */
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+        img {
+            max-width: 80%; /* Para redimensionar a imagem responsivamente */
+            height: auto;
+            border-radius: 10px; /* Bordas arredondadas */
+            box-shadow: 0 4px 15px rgba(0,0,0,0.3); /* Sombra */
+        }
+    </style>
+</head>
+<body>
+    <h1>Relógio Rolex</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Rolex_Submariner_%28Date%29.jpg/800px-Rolex_Submariner_%28Date%29.jpg" alt="Relógio Rolex">
+    <p>Este é um elegante relógio Rolex, símbolo de prestígio e qualidade.</p>
+</body>
+</html>
