--- a/index.html
+++ b/index.html
@@ -105,38 +105,11 @@
     </header>
 
     <div class="container">
-        <div class="product" onclick="showProduct('Relógio de Luxo', 299, 'https://example.com/relogio.jpg')">
+        <div class="product" onclick="showProduct('Relógio de Luxo', 299, 'https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Rolex_Submariner_%28No_Date%29.jpg/800px-Rolex_Submariner_%28No_Date%29.jpg')">
             <h3>Relógio de Luxo</h3>
             <p>Um relógio elegante feito com materiais de alta qualidade.</p>
             <p><strong>A partir de: €299</strong></p>
         </div>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relógio Rolex</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #2E7D32; /* Verde */
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        img {
-            max-width: 80%; /* Para redimensionar a imagem responsivamente */
-            height: auto;
-            border-radius: 10px; /* Bordas arredondadas */
-            box-shadow: 0 4px 15px rgba(0,0,0,0.3); /* Sombra */
-        }
-    </style>
-</head>
-<body>
-    <h1>Relógio Rolex</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Rolex_Submariner_%28Date%29.jpg/800px-Rolex_Submariner_%28Date%29.jpg" alt="Relógio Rolex">
-    <p>Este é um elegante relógio Rolex, símbolo de prestígio e qualidade.</p>
-</body>
-</html>
-
 
         <div class="product" onclick="showProduct('Bolsa de Designer', 499, 'https://example.com/bolsa.jpg')">
             <h3>Bolsa de Designer</h3>
