--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             font-weight: bold;
             color: #FFD700; /* Dourado */
         }
+        header p {
+            margin: 10px 0;
+            font-size: 1.2em;
+        }
+        .contact {
+            font-size: 1.2em;
+            margin: 10px 0;
+        }
+        .contact a {
+            color: #FFD700; /* Dourado */
+            text-decoration: none;
+        }
         .container {
             width: 80%;
             margin: auto;
@@ -102,6 +114,9 @@
     <header>
         <h1>JocaLux</h1>
         <p>Artigos de Luxo Exclusivos</p>
+        <p class="contact">
+            <a href="https://wa.me/5541992600607">Telefone: (41) 99260-0607</a>
+        </p>
     </header>
 
     <div class="container">
