--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffeb3b; /* Amarelo claro */
-            color: #333;
+            background-color: #121212; /* Fundo escuro */
+            color: #fff;
         }
         header {
             background-color: #ff5722; /* Laranja */
@@ -19,20 +19,20 @@
         }
         header h1 {
             margin: 0;
-            font-size: 3em;
+            font-size: 2.5em;
             color: #fff;
         }
         .container {
-            width: 80%;
+            width: 90%;
             margin: auto;
             padding: 20px;
         }
         .news {
-            background-color: #fff;
+            background-color: #1e1e1e; /* Fundo das notícias */
             border-radius: 10px;
             padding: 15px;
             margin: 15px 0;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.5);
         }
         .news h2 {
             font-size: 1.5em;
@@ -96,7 +96,7 @@
 
     <footer class="footer">
         <p>&copy; 2024 FUTEBOLNEWS. Todos os direitos reservados.</p>
-        <p>Contato: <a href="https://wa.me/5542992800607" target="_blank">41 99280-0607</a></p>
+        <p>Contato: <a href="https://wa.me/5542992800607" target="_blank">42 99280-0607</a></p>
     </footer>
 </body>
 </html>
