--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: #fff;
         }
         header {
-            background-color: #ff5722; /* Laranja */
+            background-color: #9c27b0; /* Roxo claro */
             text-align: center;
             padding: 20px 0;
         }
@@ -36,7 +36,7 @@
         }
         .news h2 {
             font-size: 1.5em;
-            color: #ff5722; /* Laranja */
+            color: #9c27b0; /* Roxo claro */
         }
         .news a {
             text-decoration: none;
@@ -46,7 +46,7 @@
         .footer {
             text-align: center;
             padding: 15px 0;
-            background-color: #ff5722; /* Laranja */
+            background-color: #9c27b0; /* Roxo claro */
             color: #fff;
             position: relative;
             bottom: 0;
@@ -91,6 +91,11 @@
         <div class="news">
             <h2><a href="https://www.espn.com.br/futebol/artigo/_/id/123457/jogos-para-ficar-de-olho-essa-semana" target="_blank">Jogos Imperdíveis da Semana</a></h2>
             <p>Os confrontos mais emocionantes que você não pode perder.</p>
+        </div>
+        
+        <div class="news">
+            <h2><a href="https://www.brasileirao.com.br/tabela" target="_blank">Tabela do Campeonato Brasileiro</a></h2>
+            <p>Confira a tabela completa do Brasileirão.</p>
         </div>
     </div>
 
